<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/splashLeftImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:tint="@color/colorYellow"
                app:srcCompat="@drawable/ic_cast_black_24dp"
                android:contentDescription="@string/spalsh_leftImage" />

            <ImageView
                android:id="@+id/splashCenterImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/splash_center_image"
                android:contentDescription="@string/spalsh_logoImage" />

            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/splashRightImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:tint="@color/coolBlue"
                app:srcCompat="@drawable/ic_language_black_24dp"
                android:contentDescription="@string/spalsh_rightImage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/splashContentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/splash_content"
                android:textAlignment="textStart"
                android:fontFamily="@font/nanum_square_round_eb"
                android:textSize="15sp"
                android:lineSpacingExtra="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/splashVersionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/splash_version"
            android:textSize="14sp"
            android:fontFamily="@font/nanum_square_round_eb"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>